--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ description = "PenguiFlow react template for echo-agent."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-
+    "ag-ui-protocol>=0.1.10",
+    "fastapi>=0.128.6",
+    "httpx>=0.28.1",
     "penguiflow[planner]",
-
     "pydantic>=2.6",
+    "uvicorn[standard]>=0.40.0",
+    "websockets>=15.0.1",
 ]
 
 [project.optional-dependencies]
@@ -33,3 +36,11 @@ where = ["src"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+
+[tool.uv.sources]
+agiv-cli = { git = "ssh://git@github.com/AlphonsoCode/ai-common-components", subdirectory = "assistant", branch = "main" }
+
+[dependency-groups]
+dev = [
+    "agiv-cli",
+]
